temp/CACommunity-Salesforce/src/objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>All_Fields_Verified__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>All Fields Verified?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Name_Verified__c</fullName>
        <label>Auditor Name (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <label>Auditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications_Verified__c</fullName>
        <label>Auditor Qualifications (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <label>Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Website_Verified__c</fullName>
        <label>Auditor Website (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <label>Auditor Website</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date_Verified__c</fullName>
        <label>BR Audit Statement Date (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Statement_Date__c</fullName>
        <label>BR Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type_Verified__c</fullName>
        <label>BR Audit Type (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Type__c</fullName>
        <label>BR Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BR_Audit_Verified__c</fullName>
        <label>BR Audit (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BR_Audit__c</fullName>
        <inlineHelpText>Provide public-facing BR audit statement.</inlineHelpText>
        <label>BR Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BR_Commitment_to_Comply_Verified__c</fullName>
        <label>BR Commitment to Comply (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BR_Commitment_to_Comply__c</fullName>
        <label>BR Commitment to Comply</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository_Verified__c</fullName>
        <label>CA Document Repository (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Document_Repository__c</fullName>
        <label>CA Document Repository</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Hierarchy_Verified__c</fullName>
        <label>CA Hierarchy (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Hierarchy__c</fullName>
        <label>CA Hierarchy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Name_Existing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this request is to update a root cert that is currently included, then first select the CA Owner.</inlineHelpText>
        <label>Included CA Owner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Owner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPS_Doc_Language__c</fullName>
        <label>CPS Doc Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Verified__c</fullName>
        <label>CPS (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPS__c</fullName>
        <label>CPS</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CP_Doc_Language__c</fullName>
        <label>CP Doc Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Verified__c</fullName>
        <label>CP (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <label>CP</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRL_URL_Verified__c</fullName>
        <label>CRL URL (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRL_URL_s__c</fullName>
        <label>CRL URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case No</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Root Cases</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cert_Signature_Algorithm_Verified__c</fullName>
        <label>Cert Signature Algorithm (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Signature_Algorithm__c</fullName>
        <label>Certificate Signature Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-384</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHA-512</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Summary_Verified__c</fullName>
        <label>Certificate Summary (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Summary__c</fullName>
        <label>Certificate Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Version_Verified__c</fullName>
        <label>Certificate Version (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_Version__c</fullName>
        <label>Certificate Version</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Subs_Verif_Proc_Verified__c</fullName>
        <label>Code Signing Subs Verif Proc (Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Subscriber_Verification_Pro__c</fullName>
        <label>Code Signing Subscriber Verification Pro</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Root_Case__c</fullName>
        <label>Comments by Mozilla on Root Case</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Signing_Verified__c</fullName>
        <label>Cross Signing (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_Signing__c</fullName>
        <label>Cross Signing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date_Verified__c</fullName>
        <label>EV Audit Statement Date (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date__c</fullName>
        <label>EV Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Type_Verified__c</fullName>
        <label>EV Audit Type (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Type__c</fullName>
        <label>EV Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Verified__c</fullName>
        <label>EV Audit (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit__c</fullName>
        <label>EV Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s_Verified__c</fullName>
        <label>EV Policy OID(s) (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s__c</fullName>
        <label>EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Verification_Proc_Verified__c</fullName>
        <label>EV SSL Verification Proc (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Verification_Procedures__c</fullName>
        <label>EV SSL Verification Procedures</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Tested_Verified__c</fullName>
        <label>EV Tested (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Tested__c</fullName>
        <label>EV Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Addr_Verification_Proc_Verified__c</fullName>
        <label>Email Addr Verification Proc (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address_Verification_Procedures__c</fullName>
        <label>Email Address Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Externally_Operated_SubCAs_Verified__c</fullName>
        <label>Externally Operated SubCAs (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Externally_Operated_SubCAs__c</fullName>
        <label>Externally Operated SubCAs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_First_Included__c</fullName>
        <label>Firefox Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints_Verified__c</fullName>
        <label>Mozilla Applied Constraints (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints__c</fullName>
        <label>Mozilla Applied Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multi_Factor_Authentication_Verified__c</fullName>
        <label>Multi-Factor Authentication (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Factor_Authentication__c</fullName>
        <label>Multi-Factor Authentication</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_First_Included__c</fullName>
        <label>NSS Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Security_Verified__c</fullName>
        <label>Network Security (Verified?)</label>
        <picklist>
            <picklistValues>
                <fullName>Need Response From CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification From CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Security__c</fullName>
        <label>Network Security</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>